<resources>
    <string name="app_name">Rick &amp; Morty · Lab 7</string>
    <string name="student_name">Sergio Daniel López Barrientos</string>
    <string name="student_id">Carné 25848</string>
    <string name="start">Empezar</string>
    <string name="characters">Characters</string>
    <string name="character_details">Characters details</string>
    <string name="back">Volver</string>
    <string name="species">Especie</string>
    <string name="status">Estado</string>
    <string name="gender">Género</string>
    <string name="not_found">No se encontró este personaje.</string>
    <string name="logo_description">Rick and Morty</string>
    <string name="image_description">Retrato de %1$s</string>
</resources>
